[package]
name = "rust_pie_ob"
version = "0.1.0"
edition = "2021"
description = "a pie orderbook library for rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/toyota-corolla0/rust_pie_ob"
documentation = "https://docs.rs/rust_ob/latest/rust_pie_ob/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_ob = "2.5.0"